--- a/css/landing-style-2.css
+++ b/css/landing-style-2.css
@@ -52,6 +52,7 @@ a {
     line-height: 40px;
     text-transform: uppercase;
     padding: 10px 0 5px;
+    color:#f5f5f5
 }
 
 .product-subtitle{
@@ -206,7 +207,7 @@ a {
     min-height: 80px;
     border: none;
     border-radius: 4px;
-    background: var(--tov-secondary_color, #ffd800);
+    background:  #ee3737;
     font-weight: 700;
     font-size: 24px;
     line-height: 80px;
